--- a/index.html
+++ b/index.html
@@ -3,15 +3,76 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Telegram Web App</title>
+  <title>CRM Автосервис</title>
+  <!-- Подключение Bootstrap и Material Design -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-<h1>Добро пожаловать в мой Web App!</h1>
-<p id="user-info">Загрузка данных...</p>
-<button id="send-data-btn">Отправить данные в бота</button>
+<div class="container mt-5">
+  <h1 class="text-center mb-4">CRM-система для автосервиса</h1>
 
+  <!-- Вкладки -->
+  <ul class="nav nav-tabs nav-fill mb-4" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+      <button class="nav-link active" id="add-tab" data-bs-toggle="tab" data-bs-target="#add" type="button" role="tab" aria-controls="add" aria-selected="true">Добавить автомобиль/работу</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="list-tab" data-bs-toggle="tab" data-bs-target="#list" type="button" role="tab" aria-controls="list" aria-selected="false">Список автомобилей</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="current-tab" data-bs-toggle="tab" data-bs-target="#current" type="button" role="tab" aria-controls="current" aria-selected="false">Текущий автомобиль</button>
+    </li>
+  </ul>
+
+  <!-- Содержимое вкладок -->
+  <div class="tab-content" id="myTabContent">
+    <!-- Вкладка "Добавить автомобиль/работу" -->
+    <div class="tab-pane fade show active" id="add" role="tabpanel" aria-labelledby="add-tab">
+      <h3 class="mb-3">Добавить автомобиль или работу</h3>
+      <form id="add-form">
+        <div class="mb-3">
+          <label for="car-model" class="form-label">Модель автомобиля</label>
+          <input type="text" class="form-control" id="car-model" placeholder="Введите модель автомобиля">
+        </div>
+        <div class="mb-3">
+          <label for="work-description" class="form-label">Описание работы</label>
+          <textarea class="form-control" id="work-description" rows="3" placeholder="Введите описание работы"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Добавить</button>
+      </form>
+    </div>
+
+    <!-- Вкладка "Список автомобилей" -->
+    <div class="tab-pane fade" id="list" role="tabpanel" aria-labelledby="list-tab">
+      <h3 class="mb-3">Список автомобилей</h3>
+      <table class="table table-striped">
+        <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Модель автомобиля</th>
+          <th scope="col">Описание работы</th>
+          <th scope="col">Действия</th>
+        </tr>
+        </thead>
+        <tbody id="car-list">
+        <!-- Данные будут загружаться динамически -->
+        </tbody>
+      </table>
+    </div>
+
+    <!-- Вкладка "Текущий автомобиль" -->
+    <div class="tab-pane fade" id="current" role="tabpanel" aria-labelledby="current-tab">
+      <h3 class="mb-3">Текущий автомобиль</h3>
+      <p id="current-car-info">Выберите автомобиль из списка.</p>
+    </div>
+  </div>
+</div>
+
+<!-- Подключение скриптов -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
