--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="mb-3">
           <label for="work-fields" class="form-label crm-system__label">Виды работ</label>
           <div class="crm-system__work-fields" id="work-fields"></div>
-          <button type="button" class="btn btn-primary crm-system__btn" onclick="addWorkField()">Добавить вид работы</button>
+          <button type="button" class="btn btn-primary crm-system__btn" onclick="EventHandler.addWorkField()">Добавить вид работу</button>
         </div>
         <button type="submit" class="btn btn-primary crm-system__btn">Добавить</button>
       </form>
@@ -53,25 +53,22 @@
         <input type="text" class="form-control crm-system__search-input" id="search-input" placeholder="Поиск по модели автомобиля">
         <button class="btn btn-primary crm-system__search-btn" onclick="filterCars()">Поиск</button>
       </div>
-      <table class="table table-striped crm-system__table">
-        <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Модель автомобиля</th>
-          <th scope="col">Виды работ</th>
-          <th scope="col">Действия</th>
-        </tr>
-        </thead>
-        <tbody class="crm-system__table-body" id="car-list">
-        <!-- Данные будут загружаться динамически -->
-        </tbody>
-      </table>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 crm-system__card-list" id="car-cards">
+        <!-- Карточки автомобилей будут добавляться динамически -->
+      </div>
     </div>
 
     <!-- Вкладка "Текущий автомобиль" -->
     <div class="tab-pane fade crm-system__current-panel" id="current" role="tabpanel" aria-labelledby="current-tab">
       <h3 class="crm-system__current-title mb-3">Текущий автомобиль</h3>
-      <p class="crm-system__current-info" id="current-car-info">Выберите автомобиль из списка.</p>
+      <div class="crm-system__current-info-container">
+        <p class="crm-system__current-info" id="current-car-model">Модель: </p>
+        <p class="crm-system__current-info" id="current-car-status">Статус: Новый</p>
+        <button class="btn btn-primary crm-system__btn" id="start-work-btn" onclick="EventHandler.startWork()" style="display: none;">В работу</button>
+        <ul class="list-group crm-system__work-list" id="current-car-works">
+          <!-- Виды работ будут добавляться динамически -->
+        </ul>
+      </div>
     </div>
   </div>
 </div>
