--- a/index.html
+++ b/index.html
@@ -61,15 +61,20 @@
     <!-- Вкладка "Текущий автомобиль" -->
     <div class="tab-pane fade crm-system__current-panel" id="current" role="tabpanel" aria-labelledby="current-tab">
       <h3 class="crm-system__current-title mb-3">Текущий автомобиль</h3>
-      <div class="crm-system__current-info-container">
+      <div class="crm-system__current-info-container d-flex justify-content-between align-items-center">
         <p class="crm-system__current-info" id="current-car-model">Модель: </p>
-        <p class="crm-system__current-info" id="current-car-status">Статус: Новый</p>
-        <button class="btn btn-primary crm-system__btn" id="start-work-btn" onclick="EventHandler.startWork()" style="display: none;">В работу</button>
-        <ul class="list-group crm-system__work-list" id="current-car-works">
-          <!-- Виды работ будут добавляться динамически -->
-        </ul>
+        <p class="crm-system__current-info" id="current-car-created-at">Дата создания:</p>
       </div>
+      <p class="crm-system__current-info d-flex justify-content-between align-items-center" id="current-car-status-container">
+        <span id="current-car-status">Статус: Выберите автомобиль из списка.</span>
+        <span id="current-car-status-updated-at">Дата обновления статуса:</span>
+      </p>
+      <button class="btn btn-primary crm-system__btn" id="start-work-btn" onclick="EventHandler.startWork()" style="display: none;">В работу</button>
+      <ul class="list-group crm-system__work-list" id="current-car-works">
+        <!-- Виды работ будут добавляться динамически -->
+      </ul>
     </div>
+
   </div>
 </div>
 
