--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
 <div class="container mt-5 crm-system">
@@ -29,6 +28,7 @@
 
   <!-- Содержимое вкладок -->
   <div class="tab-content crm-system__content" id="crm-system-content">
+
     <!-- Вкладка "Добавить автомобиль/работу" -->
     <div class="tab-pane fade show active crm-system__add-panel" id="add" role="tabpanel" aria-labelledby="add-tab">
       <h3 class="crm-system__add-title mb-3">Добавить автомобиль или работу</h3>
@@ -38,9 +38,29 @@
           <input type="text" class="form-control crm-system__input" id="car-model" placeholder="Введите модель автомобиля">
         </div>
         <div class="mb-3">
+          <label for="car-year" class="form-label crm-system__label">Год выпуска</label>
+          <input type="number" class="form-control crm-system__input" id="car-year" placeholder="Год выпуска">
+        </div>
+        <div class="mb-3">
+          <label for="car-vin" class="form-label crm-system__label">VIN-номер</label>
+          <input type="text" class="form-control crm-system__input" id="car-vin" placeholder="VIN-номер">
+        </div>
+        <div class="mb-3">
+          <label for="car-mileage" class="form-label crm-system__label">Пробег</label>
+          <input type="number" class="form-control crm-system__input" id="car-mileage" placeholder="Пробег">
+        </div>
+        <div class="mb-3">
+          <label for="owner-name" class="form-label crm-system__label">ФИО владельца</label>
+          <input type="text" class="form-control crm-system__input" id="owner-name" placeholder="ФИО владельца">
+        </div>
+        <div class="mb-3">
+          <label for="owner-phone" class="form-label crm-system__label">Телефон владельца</label>
+          <input type="text" class="form-control crm-system__input" id="owner-phone" placeholder="Телефон владельца">
+        </div>
+        <div class="mb-3">
           <label for="work-fields" class="form-label crm-system__label">Виды работ</label>
           <div class="crm-system__work-fields" id="work-fields"></div>
-          <button type="button" class="btn btn-primary crm-system__btn" onclick="EventHandler.addWorkField()">Добавить вид работу</button>
+          <button type="button" class="btn btn-primary crm-system__btn" onclick="EventHandler.addWorkField()">Добавить вид работы</button>
         </div>
         <button type="submit" class="btn btn-primary crm-system__btn">Добавить</button>
       </form>
@@ -69,12 +89,18 @@
         <span id="current-car-status">Статус: Выберите автомобиль из списка.</span>
         <span id="current-car-status-updated-at">Дата обновления статуса:</span>
       </p>
+      <div class="crm-system__current-details">
+        <p class="crm-system__current-info"><strong>Год выпуска:</strong> <span id="current-car-year"></span></p>
+        <p class="crm-system__current-info"><strong>VIN-номер:</strong> <span id="current-car-vin"></span></p>
+        <p class="crm-system__current-info"><strong>Пробег:</strong> <span id="current-car-mileage"></span></p>
+        <p class="crm-system__current-info"><strong>Владелец:</strong> <span id="current-owner-name"></span></p>
+        <p class="crm-system__current-info"><strong>Телефон:</strong> <span id="current-owner-phone"></span></p>
+      </div>
       <button class="btn btn-primary crm-system__btn" id="start-work-btn" onclick="EventHandler.startWork()" style="display: none;">В работу</button>
       <ul class="list-group crm-system__work-list" id="current-car-works">
         <!-- Виды работ будут добавляться динамически -->
       </ul>
     </div>
-
   </div>
 </div>
 
