--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <li class="nav-item crm-system__tab-item" role="presentation">
       <button class="nav-link crm-system__tab-btn" id="current-tab" data-bs-toggle="tab" data-bs-target="#current" type="button" role="tab" aria-controls="current" aria-selected="false">Текущий автомобиль</button>
     </li>
+    <li class="nav-item crm-system__tab-item" role="presentation">
+      <button class="nav-link crm-system__tab-btn" id="edit-tab" data-bs-toggle="tab" data-bs-target="#edit" type="button" role="tab" aria-controls="edit" aria-selected="false">Редактирование</button>
+    </li>
   </ul>
 
   <!-- Содержимое вкладок -->
@@ -96,10 +99,49 @@
         <p class="crm-system__current-info"><strong>Владелец:</strong> <span id="current-owner-name"></span></p>
         <p class="crm-system__current-info"><strong>Телефон:</strong> <span id="current-owner-phone"></span></p>
       </div>
+      <button class="btn btn-warning crm-system__btn" id="edit-car-btn" onclick="EventHandler.editCar()" style="display: none;">Редактировать</button>
       <button class="btn btn-primary crm-system__btn" id="start-work-btn" onclick="EventHandler.startWork()" style="display: none;">В работу</button>
       <ul class="list-group crm-system__work-list" id="current-car-works">
         <!-- Виды работ будут добавляться динамически -->
       </ul>
+    </div>
+
+    <!-- Вкладка "Редактирование автомобиля" -->
+    <div class="tab-pane fade crm-system__edit-panel" id="edit" role="tabpanel" aria-labelledby="edit-tab">
+      <h3 class="crm-system__edit-title mb-3">Редактирование автомобиля</h3>
+      <form class="crm-system__edit-form" id="edit-form">
+        <div class="mb-3">
+          <label for="edit-car-model" class="form-label crm-system__label">Модель автомобиля</label>
+          <input type="text" class="form-control crm-system__input" id="edit-car-model" placeholder="Введите модель автомобиля">
+        </div>
+        <div class="mb-3">
+          <label for="edit-car-year" class="form-label crm-system__label">Год выпуска</label>
+          <input type="number" class="form-control crm-system__input" id="edit-car-year" placeholder="Год выпуска">
+        </div>
+        <div class="mb-3">
+          <label for="edit-car-vin" class="form-label crm-system__label">VIN-номер</label>
+          <input type="text" class="form-control crm-system__input" id="edit-car-vin" placeholder="VIN-номер">
+        </div>
+        <div class="mb-3">
+          <label for="edit-car-mileage" class="form-label crm-system__label">Пробег</label>
+          <input type="number" class="form-control crm-system__input" id="edit-car-mileage" placeholder="Пробег">
+        </div>
+        <div class="mb-3">
+          <label for="edit-owner-name" class="form-label crm-system__label">ФИО владельца</label>
+          <input type="text" class="form-control crm-system__input" id="edit-owner-name" placeholder="ФИО владельца">
+        </div>
+        <div class="mb-3">
+          <label for="edit-owner-phone" class="form-label crm-system__label">Телефон владельца</label>
+          <input type="text" class="form-control crm-system__input" id="edit-owner-phone" placeholder="Телефон владельца">
+        </div>
+        <div class="mb-3">
+          <label for="edit-work-fields" class="form-label crm-system__label">Виды работ</label>
+          <div class="crm-system__work-fields" id="edit-work-fields"></div>
+          <button type="button" class="btn btn-primary crm-system__btn" onclick="EventHandler.addEditWorkField()">Добавить вид работы</button>
+        </div>
+        <button type="button" class="btn btn-success crm-system__btn" onclick="EventHandler.saveEditedCar()">Сохранить</button>
+        <button type="button" class="btn btn-danger crm-system__btn" onclick="EventHandler.cancelEdit()">Отменить</button>
+      </form>
     </div>
   </div>
 </div>
