--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="mb-3">
           <label for="owner-phone" class="form-label crm-system__label">Телефон владельца</label>
-          <input type="text" class="form-control crm-system__input" id="owner-phone" placeholder="Телефон владельца">
+          <input type="tel" class="form-control crm-system__input" id="owner-phone" placeholder="Телефон владельца">
         </div>
         <div class="mb-3">
           <label for="work-fields" class="form-label crm-system__label">Виды работ</label>
@@ -84,7 +84,7 @@
     <!-- Вкладка "Текущий автомобиль" -->
     <div class="tab-pane fade crm-system__current-panel" id="current" role="tabpanel" aria-labelledby="current-tab">
       <h3 class="crm-system__current-title mb-3">Текущий автомобиль</h3>
-      <div class="crm-system__current-info-container d-flex justify-content-between align-items-center">
+      <div class="crm-system__current-info-container d-flex flex-column flex-md-row justify-content-between align-items-center">
         <p class="crm-system__current-info" id="current-car-model">Модель: </p>
         <p class="crm-system__current-info" id="current-car-created-at">Дата создания:</p>
       </div>
@@ -132,7 +132,7 @@
         </div>
         <div class="mb-3">
           <label for="edit-owner-phone" class="form-label crm-system__label">Телефон владельца</label>
-          <input type="text" class="form-control crm-system__input" id="edit-owner-phone" placeholder="Телефон владельца">
+          <input type="tel" class="form-control crm-system__input" id="edit-owner-phone" placeholder="Телефон владельца">
         </div>
         <div class="mb-3">
           <label for="edit-work-fields" class="form-label crm-system__label">Виды работ</label>
