--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
 <div class="container mt-5 crm-system">
@@ -31,7 +32,6 @@
 
   <!-- Содержимое вкладок -->
   <div class="tab-content crm-system__content" id="crm-system-content">
-
     <!-- Вкладка "Добавить автомобиль/работу" -->
     <div class="tab-pane fade show active crm-system__add-panel" id="add" role="tabpanel" aria-labelledby="add-tab">
       <h3 class="crm-system__add-title mb-3">Добавить автомобиль или работу</h3>
