--- a/index.html
+++ b/index.html
@@ -151,6 +151,6 @@
 </div>
 
 <!-- Подключение скриптов -->
-<script src="script.js"></script>
+<script src="script.js?rnd=<?= rand(0, 999) ?>"></script>
 </body>
 </html>
