--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div class="container mt-5 crm-system" id="contentContainer">
-  <h1 class="crm-system__title text-center mb-4">CRM-система для автосервиса</h1>
+  <h1 class="crm-system__title text-center mb-4">CRM-система</h1>
 
   <!-- Вкладки -->
   <ul class="nav nav-tabs nav-fill crm-system__tabs mb-4" id="crm-system-tabs" role="tablist">
