--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="color-scheme" content="light dark">
   <title>Telegram Web App Example</title>
   <style>
@@ -61,6 +61,10 @@
     <input type="text" placeholder="Поле 6" required>
     <input type="text" placeholder="Поле 7" required>
     <input type="text" placeholder="Поле 8" required>
+    <input type="text" placeholder="Поле 9" required>
+    <input type="text" placeholder="Поле 9" required>
+    <input type="text" placeholder="Поле 9" required>
+    <input type="text" placeholder="Поле 9" required>
     <input type="text" placeholder="Поле 9" required>
     <input type="text" placeholder="Поле 10" required>
     <button type="submit">Отправить</button>
