--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
     <input type="text" placeholder="Поле 7" required>
     <input type="text" placeholder="Поле 8" required>
     <input type="text" placeholder="Поле 9" required>
+    <input type="text" placeholder="Поле 9" required>
+    <input type="text" placeholder="Поле 9" required>
+    <input type="text" placeholder="Поле 9" required>
+    <input type="text" placeholder="Поле 9" required>
+    <input type="text" placeholder="Поле 9" required>
     <input type="text" placeholder="Поле 10" required>
     <button type="submit">Отправить</button>
   </form>
