--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <input type="text" placeholder="Поле 10" required>
     <input type="text" placeholder="Поле 10" required>
     <input type="text" placeholder="Поле 10" required>
-    <input type="text" placeholder="Поле 11" required>
-    <input type="text" placeholder="Поле 11" required>
-    <input type="text" placeholder="Поле 11" required>
+    <input type="text" placeholder="Поле 122" required>
+    <input type="text" placeholder="Поле 22" required>
+    <input type="text" placeholder="Поле 22" required>
     <button type="submit">Отправить</button>
   </form>
 </div>
@@ -97,6 +97,8 @@
       // Обновляем высоту iframe
       const contentHeight = document.documentElement.scrollHeight;
       webApp.setHeight(Math.max(availableHeight, contentHeight));
+
+      webApp.showAlert(`contentHeight: ${contentHeight} --- availableHeight: ${availableHeight}`);
     });
   }
 
