--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
     <input type="text" placeholder="Поле 8" required>
     <input type="text" placeholder="Поле 9" required>
     <input type="text" placeholder="Поле 10" required>
+    <input type="text" placeholder="Поле 10" required>
+    <input type="text" placeholder="Поле 10" required>
+    <input type="text" placeholder="Поле 10" required>
+    <input type="text" placeholder="Поле 10" required>
+    <input type="text" placeholder="Поле 10" required>
+    <input type="text" placeholder="Поле 10" required>
     <button type="submit">Отправить</button>
   </form>
 </div>
