--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     <input type="text" placeholder="Поле 7" required>
     <input type="text" placeholder="Поле 8" required>
     <input type="text" placeholder="Поле 9" required>
-    <input type="text" placeholder="Поле 10" required>
-    <input type="text" placeholder="Поле 10" required>
+    <input type="text" placeholder="Пол2е 10" required>
+    <input type="text" placeholder="Поле4 10" required>
     <input type="text" placeholder="Поле 130" required>
-    <input type="text" placeholder="Поле 113" required>
+    <input type="text" placeholder="Поле3 113" required>
     <input type="text" placeholder="Поле 55" required>
     <input type="text" placeholder="Поле 333" required>
     <input type="text" placeholder="Поле 325" required>
@@ -148,6 +148,26 @@
   // Отслеживаем изменение viewport через Telegram API
   webApp.onEvent('viewportChanged', () => {
     adjustIframeHeight();
+  });
+
+  // Управление клавиатурой при фокусировке на input
+  const inputFields = document.querySelectorAll('input');
+  inputFields.forEach(input => {
+    input.addEventListener('focus', () => {
+      // Настройка контекстных кнопок клавиатуры
+      if (input.type === 'number') {
+        webApp.showKeyboard({ one_time: false, type: 'number' }); // Числовая клавиатура
+      } else if (input.id === 'owner-phone') {
+        webApp.showKeyboard({ one_time: false, type: 'phone' }); // Телефонная клавиатура
+      } else {
+        webApp.showKeyboard({ one_time: false, type: 'text' }); // Текстовая клавиатура
+      }
+      webApp.expand();
+    });
+
+    input.addEventListener('blur', () => {
+      webApp.hideKeyboard(); // Скрываем клавиатуру после завершения ввода
+    });
   });
 
 </script>
