--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
   <h1>Введите данные</h1>
   <form id="inputForm">
     <!-- Добавляем 10 инпутов -->
-    <input type="text" placeholder="Поле 1" required>
-    <input type="text" placeholder="Поле 2" required>
-    <input type="text" placeholder="Поле 3" required>
-    <input type="text" placeholder="Поле 4" required>
-    <input type="text" placeholder="Поле 5" required>
-    <input type="text" placeholder="Поле 6" required>
-    <input type="text" placeholder="Поле 7" required>
-    <input type="text" placeholder="Поле 8" required>
-    <input type="text" placeholder="Поле 9" required>
-    <input type="text" placeholder="Пол2е 10" required>
-    <input type="text" placeholder="Поле4 10" required>
-    <input type="text" placeholder="Поле 130" required>
-    <input type="text" placeholder="Поле3 113" required>
-    <input type="text" placeholder="Поле 55" required>
-    <input type="text" placeholder="Поле 333" required>
-    <input type="text" placeholder="Поле 325" required>
+    <input class="inpu" type="number" placeholder="Поле 1" required>
+    <input class="inpu" type="phone" placeholder="Поле 2" required>
+    <input class="inpu" type="text" placeholder="Пол234е 3" required>
+    <input class="inpu" type="number" placeholder="Поле 4" required>
+    <input class="inpu" type="text" placeholder="Поле 5" required>
+    <input class="inpu" type="text" placeholder="Поле 6" required>
+    <input class="inpu" type="text" placeholder="Поле 7" required>
+    <input class="inpu" type="text" placeholder="Поле234 8" required>
+    <input class="inpu" type="text" placeholder="Поле 9" required>
+    <input class="inpu" type="text" placeholder="Пол2е 10" required>
+    <input class="inpu" type="text" placeholder="Поле4 10" required>
+    <input class="inpu" type="text" placeholder="По234ле 130" required>
+    <input class="inpu" type="text" placeholder="Поле3 113" required>
+    <input class="inpu" type="text" placeholder="Поле 55" required>
+    <input class="inpu" type="text" placeholder="Поле 333" required>
+    <input class="inpu" type="text" placeholder="П234оле 325" required>
     <button type="submit">Отправить</button>
   </form>
 </div>
@@ -151,7 +151,7 @@
   });
 
   // Управление клавиатурой при фокусировке на input
-  const inputFields = document.querySelectorAll('input');
+  const inputFields = document.querySelectorAll('.inpu');
   inputFields.forEach(input => {
     input.addEventListener('focus', () => {
       // Настройка контекстных кнопок клавиатуры
